--- a/app/page.module.css
+++ b/app/page.module.css
@@ -651,7 +651,6 @@
     margin-bottom: 0.5rem;
     display: flex;
     align-items: center;
-    gap: 0.5rem;
 }
 
 .footerLogo span {
